Добавляет настройку проекта - проверка репозитория

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Liga-A-accelerator-template",
+  "name": "masa",
   "version": "2.0.0",
   "type": "module",
-  "description": "Стартовый шаблон сборки Лиги А",
+  "description": "Сайт проекта правительства Израиля и Еврейского агентства Сохнут.",
   "browserslist": [
     "last 3 versions",
     "IE 11",
